--- a/src/components/TodoInsert.scss
+++ b/src/components/TodoInsert.scss
@@ -1,6 +1,6 @@
 .TodoInsert{
     display: flex;
-    background: #495057;
+    background: #8C8C8C;
     
     input{
         background: none;
@@ -19,7 +19,7 @@
         background: none;
         outline: none;
         border: none;
-        background: #868e96;
+        background: #BFBFBF;
         color: white;
         padding-left: 1rem;
         padding-right: 1rem;
