--- a/src/components/TodoTemplate.scss
+++ b/src/components/TodoTemplate.scss
@@ -7,7 +7,7 @@
 
 
     .app-title{
-        background-color: #22b8cf;
+        background-color: #737373;
         color: white;
         height: 4rem;
         font-size: 1.5rem;
